initial setup for websocket